Fri Aug 27 12:47:44 2010  Kenta Murata  <mrkn@mrkn.jp>

	* math.c (math_atan2): change the behavior when x and y are zero.
	  [ruby-dev:42090] [Bug #3736] [ruby-dev:42116]

	* test/ruby/test_math.rb (test_atan2): add tests for the above
	  changes.

Fri Aug 27 12:26:23 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* object.c (rb_obj_class): remove mention of obsolete method.
	  a patch from Run Paint Run Run at [ruby-core:31842].

Fri Aug 27 12:25:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (null_device): the name of null device.  [ruby-dev:41791]

Fri Aug 27 07:57:34 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_shuffle_bang): bail out from modification during
	  shuffle.

	* array.c (rb_ary_sample): ditto.

Fri Aug 27 05:11:51 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_sysopen): Pathname#sysopen translated
	  from pathname.rb.

Thu Aug 26 22:53:56 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_shuffle): rdoc fix.  argument name was missing.
	  a patch from Run Paint Run Run at [ruby-core:31848].

Thu Aug 26 21:49:46 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_readlines): Pathname#readlines
	  translated from pathname.rb.

Thu Aug 26 10:37:00 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regint.h (OnigStackIndex): the type should be intptr_t.
	  Original Oniguruma assumes the size of long and that of void *
	  are equal, but it's not true on LLP64 platform: mswin64.
	  originally patched by shintaro kuwamoto [ruby-dev:42133]

Thu Aug 26 10:38:11 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* test/dl/test_base.rb: AIX does not have dynamically loadable lib[cm].

	* test/fiddle/helper.rb: AIX does not have dynamically loadable lib[cm].

Thu Aug 26 09:49:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_shuffle_bang): check number of argument.

Tue Aug 26 09:11:40 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (Init_bigdecimal,