@@ -1,3 +1,7 @@
+Fri Aug 27 15:26:33 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* file.c (null_device): move from io.c.
+
 Fri Aug 27 12:47:44 2010  Kenta Murata  <mrkn@mrkn.jp>
 
 	* math.c (math_atan2): change the behavior when x and y are zero.
